# Coronavirus_search_correlation

./: New_cases.py  References.txt  link.txt  pyproject.toml  start.sh
coronavirus_search/: Procfile  Texte_site.docx  manage.py  requirements.txt  test.py
coronavirus_search/coronavirus_search/: asgi.py  settings.py  urls.py  wsgi.py
coronavirus_search/graph_view/: forms.py  new_cases.py  urls.py  views.py
coronavirus_search/graph_view/templates/: about.html  avenir.html  base.html  home.html  index.html  visualisation.html  visualisation2.html
