[tool.poetry]
name = "coronavirus_search_correlation"
version = "0.1.0"
description = ""
authors = ["Pascal Tremblay-Dauphinais <pascal.tdauphinais@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.1.4"
django-crispy-forms = "1.10.0"
plotly = "4.14.1"
requests = "^2.28.0"
pandas = "1.1.2"
pytrends = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
